tests/valid/lifetime/outlives_polymorphic_return.facet
fn id<'a>(r: unrestricted &'a unrestricted isize) -> unrestricted &'a unrestricted isize {
    r
}

fn caller<'a, 'b>(
    x: unrestricted &'a unrestricted isize,
    y: unrestricted &'b unrestricted isize
) -> unrestricted &'b unrestricted isize {
    (id y)
}
