tests/invalid/lifetime/outlives_unrelated_arg.facet
fn needs_b<'b>(r: unrestricted &'b unrestricted isize) -> unrestricted &'b unrestricted isize {
    r
}

fn bad<'a, 'b>(x: unrestricted &'a unrestricted isize) -> unrestricted &'b unrestricted isize {
    (needs_b x)
}
